# editor-video-IA

./: .gitignore  CUSTOS.md  README.md  audio_processor.py  config.py  main.py  pyproject.toml  requirements.txt  video_analyzer.py  video_editor.py
final/: README.md
